Archive2/dc/e22f95698f341f/output
+ clang++ -std=c++11 -O0 -Wall -pedantic main.cpp
main.cpp:6:5: error: unknown type name 'cout'
    cout << "Give a number from 1-26: ";
    ^
main.cpp:6:10: error: expected unqualified-id
    cout << "Give a number from 1-26: ";
         ^
main.cpp:8:5: error: expected unqualified-id
    while((!(cin >> key_number)) || (key_number < 1 || key_number > 26)) {
    ^
main.cpp:12:5: error: expected unqualified-id
    return key_number;
    ^
main.cpp:13:1: error: extraneous closing brace ('}')
}
^
main.cpp:40:11: error: use of undeclared identifier 'chooseKey'
    key = chooseKey();
          ^
6 errors generated.
